--- a/package.json
+++ b/package.json
@@ -12,9 +12,17 @@
     "adb": "adb reverse tcp:8081 tcp:8081"
   },
   "dependencies": {
+    "@eva-design/eva": "^2.0.0",
     "@react-navigation/native": "^5.9.3",
+    "@ui-kitten/components": "^5.0.0",
     "react": "16.13.1",
-    "react-native": "0.63.4"
+    "react-native": "0.63.4",
+    "react-native-svg": "^12.1.0",
+    "react-navigation-hooks": "^1.1.0",
+    "@react-navigation/material-bottom-tabs": "^5.2.16",
+    "@react-navigation/material-top-tabs": "^5.2.19",
+    "@react-navigation/stack": "^5.9.0"
+
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
