--- a/package.json
+++ b/package.json
@@ -22,15 +22,18 @@
     "@react-navigation/material-bottom-tabs": "^5.2.16",
     "@react-navigation/material-top-tabs": "^5.2.19",
     "@react-navigation/stack": "^5.9.0"
-
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
     "@babel/runtime": "^7.8.4",
     "@react-native-community/eslint-config": "^1.1.0",
     "@types/jest": "^25.2.3",
+    "@types/lodash": "^4.14.161",
     "@types/react-native": "^0.63.2",
+    "@types/react-native-vector-icons": "^6.4.5",
     "@types/react-test-renderer": "^16.9.2",
+    "@typescript-eslint/eslint-plugin": "^2.27.0",
+    "@typescript-eslint/parser": "^2.27.0",
     "babel-jest": "^25.1.0",
     "eslint": "^6.5.1",
     "jest": "^25.1.0",
