--- a/package.json
+++ b/package.json
@@ -13,15 +13,23 @@
   },
   "dependencies": {
     "@eva-design/eva": "^2.0.0",
+    "@react-navigation/material-bottom-tabs": "^5.2.16",
+    "@react-navigation/material-top-tabs": "^5.2.19",
     "@react-navigation/native": "^5.9.3",
+    "@react-navigation/stack": "^5.9.0",
     "@ui-kitten/components": "^5.0.0",
     "react": "16.13.1",
     "react-native": "0.63.4",
+    "react-native-animatable": "^1.3.3",
+    "react-native-gesture-handler": "^1.10.2",
+    "react-native-image-header-scroll-view": "^1.0.0",
+    "react-native-paper": "^4.7.2",
+    "react-native-reanimated": "^1.13.2",
+    "react-native-safe-area-context": "^3.1.9",
     "react-native-svg": "^12.1.0",
-    "react-navigation-hooks": "^1.1.0",
-    "@react-navigation/material-bottom-tabs": "^5.2.16",
-    "@react-navigation/material-top-tabs": "^5.2.19",
-    "@react-navigation/stack": "^5.9.0"
+    "react-native-swiper": "^1.6.0",
+    "react-native-vector-icons": "^8.0.0",
+    "react-navigation-hooks": "^1.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
